# APILinker

./: .bumpversion.toml  .gitattributes  .gitignore  .mypy_exclusions.txt  .pre-commit-config.yaml  .readthedocs.yaml  404.html  BUMP_VERSION.md  CHANGELOG.md  CITATION.cff  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PRODUCTION_READINESS_FIXES.md  PYPI_SETUP.md  README.md  ROADMAP.md  SECRET_MANAGEMENT_IMPLEMENTATION.md  SECRET_MANAGEMENT_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  VERSION_MANAGEMENT.md  bump.ps1  bump.sh  conf.py  coverage.xml  index.html  index.rst  mkdocs.yml  mypy.ini  objects.inv  probe_tgt.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test_cli_config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml  release.yml
api_reference/: api_linker.rst  index.rst
api_reference/core/: connector.rst  mapper.rst
apilinker/: __init__.py  api_linker.py  cli.py
apilinker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apilinker/connectors/: __init__.py
apilinker/core/: __init__.py  aggregation.py  async_connector.py  auth.py  connector.py  error_handling.py  idempotency.py  logger.py  mapper.py  message_queue.py  monitoring.py  observability.py  plugins.py  provenance.py  rate_limiting.py  scheduler.py  schema_probe.py  security.py  state_store.py  validation.py
apilinker/examples/: custom_plugin.py  custom_transform.py  github_to_gitlab.py  github_to_gitlab_config.yaml  sample_config.yaml
apilinker/plugins/: builtin.py
architecture/: index.html
benchmarks/: REPRODUCTION.md  benchmark_harness.py  generate_figure4.py  index.html  mock_server.py  run_benchmarks.py  scenarios.py
benchmarks/results/: CHARTS_NOTE.txt  README.md  results.json
binder/: postBuild  requirements.txt
citation/: index.html
comparison/: index.html
configuration/: index.html
connectors_index/: index.html
cookbook/: index.html
coverage/: index.html
developer-guide/architecture/: index.html
developer-guide/benchmarks/: index.html
development/: index.html
dlq/: 1752664091_UNKNOWN_unknown.json
docs/: RESEARCH_README.md  architecture.md  benchmarks.md  citation.md  comparison.md  conf.py  configuration.md  connectors_index.md  cookbook.md  coverage.md  development.md  error_handling.md  faq.md  index.md  index.rst  installation.md  installation.rst  quick_reference.md  quickstart.md  requirements.txt  research_index.md  research_workflows.md  scientific_use_cases.md  security.md  troubleshooting.md
docs/examples/: index.md  (+1 more)
error_handling/: index.html
examples/: ApiLinker_Research_Tutorial.ipynb  comprehensive_research_examples.py  config_with_aws_secrets.yaml  config_with_azure_secrets.yaml  config_with_gcp_secrets.yaml  config_with_observability.yaml  config_with_vault_secrets.yaml  custom_plugin.py  github_to_gitlab.py  index.html  observability_example.py  observability_sync_demo.py  scientific_connectors_demo.py  scientific_research_workflow.py  secret_management_demo.py  verification_example.py
faq/: index.html
getting_started/: index.html
installation/: index.html
paper/: ApiLinker_JORS.docx  apilinker_paper.docx  apilinker_paper.md  paper.bib  paper.md  ~$ilinker_paper.docx
plugins/: index.html
quick_reference/: index.html
quickstart/: index.html
research_index/: index.html
research_workflows/: index.html
scripts/: commit_safe.ps1  fix_formatting.py  fix_formatting_robust.py  pre_commit_fix.ps1  pre_commit_helper.ps1  pre_commit_helper.sh  update_version.py
search/: search_index.json
security/: index.html
sphinx_setup/: conf.py  index.rst
tests/: test_aggregation.py  test_api_linker.py  test_cli_integration.py  test_connector.py  test_connector_rate_limiting.py  test_connector_sse.py  test_connector_streaming.py  test_monitoring.py  test_observability.py  test_plugins.py  test_secrets.py  test_secrets.py.backup
troubleshooting/: index.html
tutorials/: index.html
(+118 files in other folders)
