[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apilinker"
version = "0.1.0"
description = "A universal bridge to connect, map, and automate data transfer between any two REST APIs"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["api", "integration", "data mapping", "rest api", "connector"]
dependencies = [
    "httpx>=0.23.0",
    "pyyaml>=6.0",
    "typer>=0.7.0",
    "pydantic>=1.10.2",
    "croniter>=1.3.8",
    "rich>=12.6.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.8.0",
    "isort>=5.10.1",
    "flake8>=5.0.4",
    "mypy>=0.982",
    "pre-commit>=2.20.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.6",
    "mkdocstrings[python]>=0.19.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/apilinker"
"Bug Tracker" = "https://github.com/yourusername/apilinker/issues"
"Documentation" = "https://yourusername.github.io/apilinker"

[project.scripts]
apilinker = "apilinker.cli:app"

[tool.setuptools]
packages = ["apilinker", "apilinker.core"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
